--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,6 +39,7 @@ subjects:
 - !lcsh 'Princesses -- Fiction'
 - !lcsh 'Fairy tales'
 - !lcc 'PZ'
+- GITenberg
 tableOfContents: The country called Nonamia -- Why the Wymps cried -- The story of
   Honey and Sunny -- The little princess and the poet -- The wonderful toymakers --
   The professor of practical jokes -- The doll that came straight from Fairyland --
